--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,14 @@
-
+version: "3"
+services:
+  cer_db:
+    image: mongo:latest
+    container_name: "cer_db"
+    ports:
+      - 27017:27017
+  springboot-mongodb:
+    image: spring_app:1.0
+    container_name: spring_app
+    ports:
+      - 8080:8080
+    links:
+      - cer_db
