--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: ravikirankiran097/springapp:latest
